# RAG-application

./: .gitignore  Dockerfile  README.md  app.py  app2.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
env/: pyvenv.cfg
src/: chat.py  datab.py  doc_process.py  docy.py  embeddings.py  indexing.py  train_rag.py
templates/: index.html  script.js  styles.css
